--- a/package.json
+++ b/package.json
@@ -32,6 +32,10 @@
   "eslintConfig": {
     "extends": "react-app"
   },
+  "engines": {
+    "npm": "6.14.5",
+    "node": "14.4.0"
+},
   "browserslist": {
     "production": [
       ">0.2%",
